# MathToy

./: CMakeLists.txt  README.md  yao_math.h
DAL4/: README.md  iterator_invoker.hpp
Expr/: README.md  expr.cpp  test.cpp
Int/: fpbits.cpp  int_base.cpp  int_conv.cpp  int_format.cpp  int_format_test.cpp  linear_prime.cpp  linear_prime_test.cpp  liner_prime.cpp  prime.cpp  prime_benchmark.cpp  ratioanl_test.cpp  rational.cpp  sieve_prime.cpp  sieve_prime_test.cpp  wide_int.cpp  wide_int_test.cpp
Integers/: IntegerArray.cpp  IntegerConv.cpp  IntegerSpan.cpp  WideInteger.cpp  int_conv.cpp  int_format.cpp
Matrix/: README.md  input.txt  matrix.cpp  output.txt  static_matrix.cpp  test-expr.cpp  test.cpp
